[package]
name = "kx"
version = "0.2.1"
authors = ["max"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
skim = "0.6.8"
serde_json = "1.0.40"
serde = { version = "1.0.101", features=["derive"] }
itertools = "0.8.0"
dirs = "2.0.2"
sysinfo = "0.9.5"
