[package]
name = "k8s-kx"
version = "0.2.1"
authors = [ "Martin Ivicic <max.enhanced@gmail.com>" ]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "set KUBECONFIG environment variable for current shell session"
repository = "https://github.com/jsen-/kx"
keywords = [ "kubernetes", "k8s", "kubeconfig", "cli" ]
readme = "README.md"
categories = [ "command-line-utilities" ]

[[bin]]
name = "kx"
path = "src/main.rs"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
skim = "0.6.8"
serde_json = "1.0.40"
serde = { version = "1.0.101", features=[ "derive" ] }
itertools = "0.8.0"
dirs = "2.0.2"
sysinfo = "0.9.5"
